--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head></head>
     <body>
-        <a href="./#03.html">03</a>
-        <a href="./#04.html">04</a>
-        <a href="./#06.html">06</a>
-        <a href="./#07.html">07</a>
-        <a href="./#08.html">08</a>
-        <a href="./#09.html">09</a>
-        <a href="./#10.html">10</a>
-        <a href="./#11.html">11</a>
+        <a href="./vol03.html">03</a>
+        <a href="./vol04.html">04</a>
+        <a href="./vol06.html">06</a>
+        <a href="./vol07.html">07</a>
+        <a href="./vol08.html">08</a>
+        <a href="./vol09.html">09</a>
+        <a href="./vol10.html">10</a>
+        <a href="./vol11.html">11</a>
     </body>
 </html>
