--- a/vol11.html
+++ b/vol11.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <section>
-    <img src="icon.png" alt="太郎のアイコン画像です">
+    <img src="https://s3-ap-northeast-1.amazonaws.com/dotinstallcode.com/production/2022-03-01/702501/eee645b7fbbaa57421ff94ea9861b9e1d97d8d04/icon.png" alt="太郎のアイコン画像です">
     <h1>山田太郎</h1>
     <p>UI/UXデザイナー見習いです。日々の勉強、がんばっています。</p>
   </section>
